# tcg-starter-jmugac

./: .replit  README.md  pyproject.toml  replit.nix
app/: main.py
static/css/: styles.css
templates/: base.html  card.html  index.html
