[tool.poetry]
name = "tcg-backend"
version = "0.1.0"
description = ""
authors = ["Francisco Mejía <fmejiaantezano@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
fastapi = {extras = ["all"], version = "^0.78.0"}

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
